<resources>
    <string name="app_name">BarcodeScanner</string>
    <string name="book_image">An image of your book</string>
    <string name="barcode">Barcode</string>
    <string name="bookinfo">Title, Author, etc will appear here </string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>
    <string name="have">Have</string>
    <string name="want">Want</string>
    <string name="db_success">Saved this book to db!</string>
    <string name="db_failure">Failed to save book!</string>
    <string name="barcode_error">This is not a valid ISBN</string>
    <string name="barcode_failure">Check WiFi/Data Connection</string>
</resources>