<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.example.barcodescanner.CameraResizing
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.example.barcodescanner.CameraResizing>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/surface_view"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/barcode_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/barcode"
                android:textSize="30dp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/bookinfo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookinfo"
                android:textSize="18dp"
                android:layout_marginHorizontal="10dp" />

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/book_image"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginTop="10dp"
                />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/want_button"
                        android:text="@string/want"
                        android:backgroundTint="@color/pink"
                        android:layout_gravity="bottom"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/have_button"
                        android:text="@string/have"
                        android:backgroundTint="@color/green"
                        android:layout_gravity="bottom"/>
                </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>